[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/script_bullet.gd" type="Script" id=1]
[ext_resource path="res://sources/images/sprite_blue_ball/sprite_big_blue1.png" type="Texture" id=2]
[ext_resource path="res://sources/images/sprite_blue_ball/sprite_big_blue2.png" type="Texture" id=3]
[ext_resource path="res://sources/images/sprite_blue_ball/sprite_big_blue3.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 8.0

[node name="Projectile" type="Node2D"]

script/script = ExtResource( 1 )
BASE_SPEED = 50
style = 1
death_animation_name = "enter name"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "default"
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1.91135, 0, 0, 1.95741, 1.63536, 0.727601 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 1.63536, 0.727601 )
transform/scale = Vector2( 1.91135, 1.95741 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 15.0
one_shot = true
autostart = false

[connection signal="area_enter" from="Area2D" to="." method="_on_projectile_area_enter"]

[connection signal="body_enter" from="Area2D" to="." method="_on_projectile_body_enter"]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]


